--- a/kyverno/deployment-template-match-policy/nginx.yml
+++ b/kyverno/deployment-template-match-policy/nginx.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: kyverno
+  namespace: nginx
 spec:
   selector:
     matchLabels:
@@ -46,6 +46,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
+  namespace: nginx
 spec:
   selector:
     app: nginx
